variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:4: error: '(' expected but identifier found.
while !(2*biscuit == caseOrange +1){
      ^RunHalf:14: error: illegal start of simple expression
	}
        ^